декор для чекбоксов

--- a/source/form.html
+++ b/source/form.html
@@ -95,7 +95,8 @@
               <a class="main-nav__link main-nav__link--form" href="./catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--form main-nav__link--active main-nav__link--form-active" href="./form.html">Подбор программы</a>
+              <a class="main-nav__link main-nav__link--form main-nav__link--active main-nav__link--form-active"
+                href="./form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -188,27 +189,32 @@
             </div>
             <ul class="additionally__list reset-list">
               <li class="additionally__item">
-                <label class="additionally__fake-sugar">
-                  <input class="additionally__fake-sugar-form" type="checkbox" name="additionally" value="fake-sugar"
+                <label class="additionally__label">
+                  <input class="additionally__form" type="checkbox" name="additionally" value="fake-sugar"
                     checked>
-                  Сахарозаменитель
+                  <span class="additionally__mark"></span>
+                  <span class="additionally__description">Сахарозаменитель</span>
                 </label>
               </li>
               <li class="additionally__item">
-                <label class="additionally__water">
-                  <input class="additionally__water-form" type="checkbox" name="additionally" value="water"> Питьевая
-                  вода
+                <label class="additionally__label">
+                  <input class="additionally__form" type="checkbox" name="additionally" value="water">
+                  <span class="additionally__mark"></span>
+                  <span class="additionally__description">Питьевая вода</span>
                 </label>
               </li>
               <li class="additionally__item">
-                <label class="additionally__milk">
-                  <input class="additionally__milk-form" type="checkbox" name="additionally" value="milk"> Молоко
+                <label class="additionally__label">
+                  <input class="additionally__form" type="checkbox" name="additionally" value="milk">
+                  <span class="additionally__mark"></span>
+                  <span class="additionally__description">Молоко</span>
                 </label>
               </li>
               <li class="additionally__item">
-                <label class="additionally__vitamins">
-                  <input class="additionally__vitamins-form" type="checkbox" name="additionally" value="vitamins">
-                  Витамины
+                <label class="additionally__label">
+                  <input class="additionally__form" type="checkbox" name="additionally" value="vitamins">
+                  <span class="additionally__mark"></span>
+                  <span class="additionally__description">Витамины</span>
                 </label>
               </li>
             </ul>
@@ -260,7 +266,8 @@
             <li class="footer-social__item">
               <a class="footer-social__link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
-                <svg class="footer-social__icon footer-social__icon--vk" aria-label="Ссылка на страницу HTML Academy в социальной сети Вконтакте.">
+                <svg class="footer-social__icon footer-social__icon--vk"
+                  aria-label="Ссылка на страницу HTML Academy в социальной сети Вконтакте.">
                   <use xlink:href="#vk"></use>
                 </svg>
               </a>
@@ -268,7 +275,8 @@
             <li class="footer-social__item">
               <a class="footer-social__link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube.</span>
-                <svg class="footer-social__icon footer-social__icon--yt" aria-label="Ссылка на канал HTML Academy в YouTube.">
+                <svg class="footer-social__icon footer-social__icon--yt"
+                  aria-label="Ссылка на канал HTML Academy в YouTube.">
                   <use xlink:href="#youtube"></use>
                 </svg>
               </a>
