декор для radio

--- a/source/form.html
+++ b/source/form.html
@@ -136,21 +136,25 @@
               <legend class="visually-hidden"> Цель программы питания.</legend>
               <ul class="purpose-program__list reset-list">
                 <li class="purpose-program__item">
-                  <label class="purpose-program__slim">
-                    <input class="purpose-program__slim-form" type="radio" name="purpose-program" value="program-slim"
-                      checked>похудение
+                  <label class="purpose-program__label">
+                    <input class="purpose-program__form" type="radio" name="purpose-program" value="program-slim"
+                      checked>
+                    <span class="purpose-program__mark"></span>
+                    <span class="purpose-program__name">похудение</span>
                   </label>
                 </li>
                 <li class="purpose-program__item">
-                  <label class="purpose-program__pro">
-                    <input class="purpose-program__pro-form" type="radio" name="purpose-program" value="program-pro">набор
-                    массы
+                  <label class="purpose-program__label">
+                    <input class="purpose-program__form" type="radio" name="purpose-program" value="program-pro">
+                    <span class="purpose-program__mark"></span>
+                    <span class="purpose-program__name">набор массы</span>
                   </label>
                 </li>
                 <li class="purpose-program__item">
-                  <label class="purpose-program__advise">
-                    <input class="purpose-program__advise" type="radio" name="purpose-program" value="need-your-advice">
-                    не знаю (нужен ваш совет)
+                  <label class="purpose-program__label">
+                    <input class="purpose-program__form" type="radio" name="purpose-program" value="need-your-advice">
+                    <span class="purpose-program__mark"></span>
+                    <span class="purpose-program__name">не знаю (нужен ваш совет)</span>
                   </label>
                 </li>
               </ul>
