--- a/source/index.html
+++ b/source/index.html
@@ -149,7 +149,7 @@
               <div class="catalog-program__icon-tablet catalog-program__icon--cat-slim-tablet"></div>
             </div>
             <a class="catalog-program__toggle" href="#">
-             <span class="catalog-program__name">каталог slim</span>
+              <span class="catalog-program__name">каталог slim</span>
               <div class="catalog-program__arrow"></div>
             </a>
           </li>
@@ -323,7 +323,8 @@
             <li class="footer-social__item">
               <a class="footer-social__link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
-                <svg class="footer-social__icon footer-social__icon--vk" aria-label="Ссылка на страницу HTML Academy в социальной сети Вконтакте.">
+                <svg class="footer-social__icon footer-social__icon--vk"
+                  aria-label="Ссылка на страницу HTML Academy в социальной сети Вконтакте.">
                   <use xlink:href="#vk"></use>
                 </svg>
               </a>
@@ -331,7 +332,8 @@
             <li class="footer-social__item">
               <a class="footer-social__link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube.</span>
-                <svg class="footer-social__icon footer-social__icon--yt" aria-label="Ссылка на канал HTML Academy в YouTube.">
+                <svg class="footer-social__icon footer-social__icon--yt"
+                  aria-label="Ссылка на канал HTML Academy в YouTube.">
                   <use xlink:href="#youtube"></use>
                 </svg>
               </a>
