--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Academy2: Кэт Энерджи. Каталог.</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="page__body">
@@ -461,8 +461,8 @@
         <section class="footer__logo footer-logo">
           <h2 class="visually-hidden">Логотип сайта.</h2>
           <a class="footer-logo__logo-cat-energy" href="#">
-            <img class="footer-logo__cat-energy" src="img/logo-cat-energy.svg" alt="Логотип Cat Energy" width="101"
-              height="18">
+            <img class="footer-logo__cat-energy" src="img/logo-cat-energy.svg" alt="Логотип Cat Energy" width="128"
+              height="24">
           </a>
         </section>
 
