--- a/source/form.html
+++ b/source/form.html
@@ -89,7 +89,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list reset-list">
             <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--catalog" href="./index.html">Главная</a>
+              <a class="main-nav__link main-nav__link--form" href="./index.html">Главная</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--form" href="./catalog.html">Каталог продукции</a>
@@ -183,7 +183,7 @@
               <h3 class="comment__title">Комментарий</h3>
             </div>
             <label class="comment__skill-cat" for="skills"> </label>
-            <textarea class="comment__skill-cat-form" rows="7" cols="7" id="skills">Расскажите обо всех повaдках кота
+            <textarea class="comment__skill-cat-form" rows="5" cols="7" id="skills">Расскажите обо всех повaдках кота
             </textarea>
           </div>
 
