--- a/source/catalog.html
+++ b/source/catalog.html
@@ -142,7 +142,7 @@
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
-                <div class="product-card__details ">
+                <div class="product-card__details composition">
                   <ul class="composition__info reset-list">
                     <li class="composition__text">Масса</li>
                     <li class="composition__value">500 г</li>
@@ -177,7 +177,7 @@
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
-                <div class="product-card__details">
+                <div class="product-card__details composition">
                   <ul class="composition__info reset-list">
                     <li class="composition__text">Масса</li>
                     <li class="composition__value">1000 г</li>
@@ -212,7 +212,7 @@
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
-                <div class="product-card__details">
+                <div class="product-card__details composition">
                   <ul class="composition__info reset-list">
                     <li class="composition__text">Масса</li>
                     <li class="composition__value">500 г</li>
@@ -247,7 +247,7 @@
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г </h3>
-                <div class="product-card__details">
+                <div class="product-card__details composition">
                   <ul class="composition__info reset-list">
                     <li class="composition__text">Масса</li>
                     <li class="composition__value">1000 г</li>
@@ -282,7 +282,7 @@
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
-                <div class="product-card__details">
+                <div class="product-card__details composition">
                   <ul class="composition__info reset-list">
                     <li class="composition__text">Масса</li>
                     <li class="composition__value">500 г</li>
@@ -317,7 +317,7 @@
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
-                <div class="product-card__details">
+                <div class="product-card__details composition">
                   <ul class="composition__info reset-list">
                     <li class="composition__text">Масса</li>
                     <li class="composition__value">1000 г</li>
@@ -352,7 +352,7 @@
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
-                <div class="product-card__details">
+                <div class="product-card__details composition">
                   <ul class="composition__info reset-list">
                     <li class="composition__text">Масса</li>
                     <li class="composition__value">500 г</li>
