--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico">
+  <link rel="preload" href="fonts/oswaldmedium.woff" as="font">
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
+  <link rel="preload" href="fonts/oswaldregular.woff" as="font">
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="page__body">
@@ -146,7 +150,7 @@
                 деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </p>
-              <div class="catalog-program__icon-tablet catalog-program__icon--cat-slim-tablet"></div>
+              <div class="catalog-program__icon-tablet catalog-program__icon-tablet--cat-slim"></div>
             </div>
             <a class="catalog-program__toggle" href="#">
               <span class="catalog-program__name">каталог slim</span>
@@ -162,7 +166,7 @@
               <p class="catalog-program__text">Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
-              <div class="catalog-program__icon-tablet catalog-program__icon--cat-pro-tablet"></div>
+              <div class="catalog-program__icon-tablet catalog-program__icon-tablet--cat-pro"></div>
             </div>
             <a class="catalog-program__toggle catalog-program-pro" href="#">
               <span class="catalog-program__name"> каталог pro </span>
@@ -208,7 +212,7 @@
     <section class="live-example">
       <div class="live-example__wrapper">
         <h2 class="live-example__title">Живой пример</h2>
-        <div class="live-example__wrapper--desktop">
+        <div class="live-example__wrapper-desktop">
           <section class="live-example__slider-desktop">
             <p class="live-example__text"> Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat
               Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и
@@ -224,12 +228,12 @@
                 <span class="module__text module__text--period">затрачено <br class="module__text--br"> времени</span>
               </div>
               <div class="module__description module__description--result">
-                <span class="module__number module__text--result">Затраты на питание:</span>
-                <span class="module__number module__text--result"> 15 000 руб.</span>
+                <span class="module__number module__number--result">Затраты на питание:</span>
+                <span class="module__number module__number--result"> 15 000 руб.</span>
               </div>
             </div>
           </section>
-          <div class="live-example__wrapper--tablet">
+          <div class="live-example__wrapper-tablet">
             <div class="live-example__cat-comparison cat-comparison">
               <div class="cat-comparison__wrapper">
 
